Simplified, re-fixed, and decoupled header space for WebApp and Cordova We should now be able to change header spacing for the WebApp and individual devices in Cordova, without breaking the rest.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,4 +1,6 @@
 // stylelint-disable selector-max-type
+$cordova-container-main-top-margin-ios:       3vh;
+$cordova-container-main-top-margin-ios-notch: 8vh;
 
 html {
   box-sizing: border-box;
@@ -28,6 +30,12 @@ body {
 .container-main {
   padding-top: $space-md;
   padding-bottom: $space-xl;
+  &__candidate-ios-notch {
+    padding-top: $cordova-container-main-top-margin-ios-notch;
+  }
+  &__candidate-ios-older {
+    padding-top: $cordova-container-main-top-margin-ios;
+  }
 }
 
 .container-settings {
